--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <a class="navbar-brand" href="#">Brad</a>
+            <a class="navbar-brand" href="#">Siddhant Bose</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,8 +48,8 @@
         <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title">Hi, it's me Brad</h2>
-                <p class="hero_desc">I am a professional freelancer in New York City</p>
+                <h2 class="hero_title">Hi, I'm Sid</h2>
+                <p class="hero_desc">Skilled Full Stack Developer & IT Specialist</p>
             </div>
             </div>
         </div>
@@ -71,17 +71,16 @@
                     <div class="row mt-3">
                         <div class="col-md-6">
                             <ul>
-                                <li>Name: David Parker</li>
-                                <li>Age: 28</li>
-                                <li>Occupation: Web Developer</li>
+                                <li>Name: Siddhant Bose</li>
+                                <li>Age: 29</li>
 
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <ul>
-                                <li>Name: David Parker</li>
+                                <!-- <li>Name: David Parker</li>
                                 <li>Age: 28</li>
-                                <li>Occupation: Web Developer</li>
+                                <li>Occupation: Web Developer</li> -->
 
                             </ul>
                         </div>
@@ -273,7 +272,7 @@
                     <!-- to edit google map goto https://www.embed-map.com type your location, generate html code and copy the html  -->
                     <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
                         <div id="embedmap-canvas" style="height:100%; width:100%;max-width:100%;">
-                            <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=new+york&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+                            <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Clarksville,+TN,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
                             </iframe>
                         </div>
                         <a class="googlemaps-html" href="https://www.embed-map.com" id="get-data-forembedmap">https://www.embed-map.com</a>
