--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <div class="container-fluid">
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title">Hi, I'm Sid</h2>
-                <p class="hero_desc">Skilled Full Stack Developer & IT Specialist</p>
+                <h2 class="hero_title">Hi, I'm Sid.</h2>
+                <p class="hero_desc">Full Stack Developer & IT Specialist</p>
             </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
             <h1 class="text-center">About Me</h1>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="images/about.jpeg" class= "imageAboutPage" alt="">
+                    <img src="images/about.jpg" class= "imageAboutPage" alt="">
                 </div>
 
                 <div class="col-lg-8">
