--- a/index.html
+++ b/index.html
@@ -283,15 +283,15 @@
 
                 <div class="col-lg-6">
                     <!-- form fields -->
-                    <form>
+                    <form  name="contact" netlify>
                         <input type="text" class="form-control form-control-lg" placeholder="Name">
                         <input type="email" class="form-control mt-3" placeholder="Email">
                         <input type="text" class="form-control mt-3" placeholder="Subject">
                         <div class="mb-3 mt-3">
-                            <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
-                        </div>
+                        <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
+                        </div>                    
+                        <button type="button" class="btn btn-success mt-3">Contact Me</button>
                     </form>
-                    <button type="button" class="btn btn-success mt-3">Contact Me</button>
                     
                 </div>
 
@@ -303,11 +303,11 @@
         <div class="container-fluid">
             <!-- social media icons -->
             <div class="social-icons mt-4">
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                <!-- <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
+                <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a> -->
+                <a href="https://www.linkedin.com/in/siddhantbose/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <!-- <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a> -->
             </div>
         </div>
     </footer>
