--- a/index.html
+++ b/index.html
@@ -283,14 +283,14 @@
 
                 <div class="col-lg-6">
                     <!-- form fields -->
-                    <form  name="contact" netlify>
+                    <form  name="contact" method="POST" netlify>
                         <input type="text" class="form-control form-control-lg" placeholder="Name">
                         <input type="email" class="form-control mt-3" placeholder="Email">
                         <input type="text" class="form-control mt-3" placeholder="Subject">
                         <div class="mb-3 mt-3">
                         <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
                         </div>                    
-                        <button type="button" class="btn btn-success mt-3">Contact Me</button>
+                        <button type="submit" class="btn btn-success mt-3">Contact Me</button>
                     </form>
                     
                 </div>
