--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
     <!-- about section-->
     <section id="about">
+        <br></br>
         <div class="container mt-4 pt-4">
             <h1 class="text-center">About Me</h1>
             <div class="row mt-4">
@@ -96,6 +97,8 @@
 
     <!-- services section-->
     <section id="services">
+        <br></br>
+        <br>
         <div class="container">
             <h1 class="text-center">Services</h1>
             <div class="row">
@@ -177,6 +180,7 @@
 
     <!-- portfolio section-->
     <section id="portfolio">
+        <br></br>
         <div class="container mt-3">
             <h1 class="text-center">Portfolio</h1>
             <div class="row">
@@ -272,7 +276,7 @@
                     <!-- to edit google map goto https://www.embed-map.com type your location, generate html code and copy the html  -->
                     <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
                         <div id="embedmap-canvas" style="height:100%; width:100%;max-width:100%;">
-                            <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Clarksville,+TN,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+                            <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Montgomery+County,+TN,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
                             </iframe>
                         </div>
                         <a class="googlemaps-html" href="https://www.embed-map.com" id="get-data-forembedmap">https://www.embed-map.com</a>
