--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
                 <div class="col-lg-6">
                     <!-- form fields -->
-                    <form  name="contact" method="POST" netlify>
+                    <form  name="Contact Me" method="POST" netlify>
                         <input type="text" class="form-control form-control-lg" placeholder="Name">
                         <input type="email" class="form-control mt-3" placeholder="Email">
                         <input type="text" class="form-control mt-3" placeholder="Subject">
