--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <!-- main banner -->
     <section class="bgimage" id="home">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row789">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                <h2 class="hero_title">Hi, I'm Sid.</h2>
-                <p class="hero_desc">Full Stack Developer & IT Specialist</p>
+                <h2 class="hero_title">Hi! I'm Sid.</h2>
+                <p class="hero_desc">I am a Full Stack Developer & IT Specialist.</p>
             </div>
             </div>
         </div>
