Updated project descriptions and links.

--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                         <img class="card-img-top" src="images/Project1.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Tech Port - Ticket Management System</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">Worked with an agile team of 7 full stack software developers to create a ticketing system able to create, edit and delete tickets upon completion of the work orders. Website supports user authentication and authorization using bcrypt to hash credentials and user persistence.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://github.com/Team-Cache-Out/tech-port" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -204,9 +204,9 @@
                         <img class="card-img-top" src="images/Project2.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">N20W Member - Admin Portal</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">Helped a local game shop manage their membership accounts and created a web app and Restful API with full CRUD functionality using React, Express and postgres.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://n20wmembers.herokuapp.com/" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -217,9 +217,9 @@
                         <img class="card-img-top" src="images/Project3.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">DigiDeck - Digimon TCG Database</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">Created a web app with AJAX functionality to fetch up to date Digimon trading card game data and serve it to users in an efficient way.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://digideck.netlify.app/" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
