--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <section id="certifications">
         <br></br>
         <div class="container mt-3">
-            <h1 class="text-center">Projects</h1>
+            <h1 class="text-center">Certifications</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
