Added cert thumbnails.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/Project1.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/cert1.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Tech Port - Ticket Management System</h4>
                             <p class="card-text">Worked with an agile team of 7 full stack software developers to create a ticketing system able to create, edit and delete tickets upon completion of the work orders. Website supports user authentication and authorization using bcrypt to hash credentials and user persistence.</p>
@@ -203,7 +203,7 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/Project2.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/cert2.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">N20W Member - Admin Portal</h4>
                             <p class="card-text">Helped a local game shop manage their membership accounts and created a web app and Restful API with full CRUD functionality using React, Express and postgres.</p>
@@ -216,7 +216,7 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="images/Project3.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/cert3.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">DigiDeck - Digimon TCG Database</h4>
                             <p class="card-text">Created a web app with AJAX functionality to fetch up to date Digimon trading card game data and serve it to users in an efficient way.</p>
