Added github link to social links

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <h4 class="card-title">Advanced Software Engineering Immersive</h4>
                             <p class="card-text">18-week software engineering immersive program with over 1500 hours of coding, full-stack development of numerous user-friendly web applications using JavaScript, React.js, Express.js, PostgreSQL in an Agile environment.</p>
                             <div class="text-center">
-                                <a href="https://media.licdn.com/dms/image/D562DAQFI4FdBhdNv8g/profile-treasury-document-images_1280/1/1686849165870?e=1690416000&v=beta&t=kJqDt1NBSBHkQTmY6yqe3jsXjIYR_zuGC1LMwP0h018" class="btn btn-success">Link</a>
+                                <a href="https://media.licdn.com/dms/image/D562DAQFI4FdBhdNv8g/profile-treasury-document-images_1280/1/1686849165870?e=1690416000&v=beta&t=kJqDt1NBSBHkQTmY6yqe3jsXjIYR_zuGC1LMwP0h018" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                             <h4 class="card-title">Windows Server 2019 Administration</h4>
                             <p class="card-text">Course goes over topics that every systems administrator, network administrator and/or Cloud engineer or architect should know when managing Windows Server 2019/20H2.</p>
                             <div class="text-center">
-                                <a href="https://www.udemy.com/certificate/UC-2d3cd90e-8b80-4e3c-9aed-77ff82baaf0c/" class="btn btn-success">Link</a>
+                                <a href="https://www.udemy.com/certificate/UC-2d3cd90e-8b80-4e3c-9aed-77ff82baaf0c/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                             <h4 class="card-title">Microsoft Office 365 Administration</h4>
                             <p class="card-text">This course focuses on the administration, configuration, troubleshooting and operations of the Microsoft Office 365 platform.</p>
                             <div class="text-center">
-                                <a href="https://www.udemy.com/certificate/UC-37af6d1b-e0d0-43e3-b4b7-a73780231601/" class="btn btn-success">Link</a>
+                                <a href="https://www.udemy.com/certificate/UC-37af6d1b-e0d0-43e3-b4b7-a73780231601/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                             <h4 class="card-title">Tech Port - Ticket Management System</h4>
                             <p class="card-text">Worked with an agile team of 7 full stack software developers to create a ticketing system able to create, edit and delete tickets upon completion of the work orders. Website supports user authentication and authorization using bcrypt to hash credentials and user persistence.</p>
                             <div class="text-center">
-                                <a href="https://github.com/Team-Cache-Out/tech-port" class="btn btn-success">Link</a>
+                                <a href="https://github.com/Team-Cache-Out/tech-port" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -256,7 +256,7 @@
                             <h4 class="card-title">N20W Member - Admin Portal</h4>
                             <p class="card-text">Helped a local game shop manage their membership accounts and created a web app and Restful API with full CRUD functionality using React, Express and postgres.</p>
                             <div class="text-center">
-                                <a href="https://n20wmembers.herokuapp.com/" class="btn btn-success">Link</a>
+                                <a href="https://n20wmembers.herokuapp.com/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -269,7 +269,7 @@
                             <h4 class="card-title">DigiDeck - Digimon TCG Database</h4>
                             <p class="card-text">Created a web app with AJAX functionality to fetch up to date Digimon trading card game data and serve it to users in an efficient way.</p>
                             <div class="text-center">
-                                <a href="https://digideck.netlify.app/" class="btn btn-success">Link</a>
+                                <a href="https://digideck.netlify.app/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -297,7 +297,7 @@
                         </style>
                     </div>
                 </div>
-
+<br>
                 <div class="col-lg-6">
                     <!-- form fields -->
                     <form  name="Contact Me" method="POST" netlify>
@@ -324,6 +324,7 @@
                 <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a> -->
                 <a href="https://www.linkedin.com/in/siddhantbose/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/pyrotechnicsid" target="_blank"><i class="fab fa-github"></i></a>
                 <!-- <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a> -->
             </div>
         </div>
