Changed service titles and updated icons.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class="fas servicesIcon fa-clock"></i>
-                            <h4 class="card-title mt-3">Website Development</h4>
+                            <h4 class="card-title mt-3">Frontend & Backend Development</h4>
                             <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
                                 Some quick example text to build on the card title and make up the bulk of the card's content.
                             </p>
@@ -122,7 +122,7 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='fas servicesIcon fa-layer-group'></i>
-                            <h4 class="card-title mt-3">Website Design</h4>
+                            <h4 class="card-title mt-3">UI/UX</h4>
                             <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
                                 Some quick example text to build on the card title and make up the bulk of the card's content.
                             </p>
@@ -134,7 +134,7 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='far servicesIcon fa-check-circle'></i>
-                            <h4 class="card-title mt-3">Website Deployment</h4>
+                            <h4 class="card-title mt-3">Web App Deployment</h4>
                             <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
                                 Some quick example text to build on the card title and make up the bulk of the card's content.
                             </p>
@@ -147,8 +147,8 @@
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <i class='fas servicesIcon fa-search'></i>
-                            <h4 class="card-title mt-3">SEO</h4>
+                            <i class='fas servicesIcon fa-database'></i>
+                            <h4 class="card-title mt-3">SQL Database</h4>
                             <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
                                 Some quick example text to build on the card title and make up the bulk of the card's content.
                             </p>
@@ -160,7 +160,7 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='fas servicesIcon fa-shield-alt'></i>
-                            <h4 class="card-title mt-3">DevOps</h4>
+                            <h4 class="card-title mt-3">System Administration</h4>
                             <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
                                 Some quick example text to build on the card title and make up the bulk of the card's content.
                             </p>
@@ -171,8 +171,8 @@
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
-                            <i class='fas servicesIcon fa-wrench'></i>
-                            <h4 class="card-title mt-3">QA</h4>
+                            <i class='fas servicesIcon fa-network-wired'></i>
+                            <h4 class="card-title mt-3">Networking</h4>
                             <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
                                 Some quick example text to build on the card title and make up the bulk of the card's content.
                             </p>
@@ -297,7 +297,7 @@
                         </style>
                     </div>
                 </div>
-<br>
+<br></br>
                 <div class="col-lg-6">
                     <!-- form fields -->
                     <form  name="Contact Me" method="POST" netlify>
@@ -323,6 +323,7 @@
                 <!-- <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a> -->
+                <a href="mailto:sidbose93@pm.me" target="_blank"><i class="fas fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/siddhantbose/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/pyrotechnicsid" target="_blank"><i class="fab fa-github"></i></a>
                 <!-- <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a> -->
