Added experience descriptions and updated About me

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="#experience">Experience</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#certifications">Certifications</a>
@@ -71,29 +71,35 @@
 
                 <div class="col-lg-8">
                     <br>
-                    <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
+                    <p> Hello! My name is Siddhant Bose or you can call me 'Sid'. I am a highly motivated army veteran and efficient problem solver with over 2000 hours of coding experience focusing on both frontend and backend applications as well as many years of experience in troubleshooting and supporting end user hardware and network related issues. I am proficient in a variety of operating systems and applications, including Windows, MacOS, iOS, Android and Microsoft Office. Some of my skills are listed below:
                         
                     </p>
                     <div class="row mt-3">
                         <div class="col-md-6">
                             <ul>
-                                <li>Name: Siddhant Bose</li>
-                                <li>Age: 29</li>
+                                <li>JavaScript (ES5 and ES6)</li>
+                                <li>React.js</li>
+                                <li>Bcrypt Authentication</li>
+                                <li>HTML5</li>
+                                <li>CSS3</li>
+                                <li>VPN implementation</li>
+                                <li>File & Print server management</li>
 
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <ul>
-                                <!-- <li>Name: David Parker</li>
-                                <li>Age: 28</li>
-                                <li>Occupation: Web Developer</li> -->
+                                <li>Express.js</li>
+                                <li>PostgreSQL/MySQL</li>
+                                <li>RESTful API Development</li>
+                                <li>Windows Server 2019/20H2, Active Directory with Azure integration</li>
+                                <li>DHCP/DNS Configuration</li>
 
                             </ul>
                         </div>
                     </div>
                     <div class="row mt-3">
-                        <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        <p> I am passionate about building excellent applications with robust functionality. I specialize in creating software for clients ranging from individuals and small-businesses all the way to large enterprise corporations. So if you have a project that you need help with, contact me <a href="#contact">here</a> and I would be happy to help! If you would like to see some of my previous work, click <a href="#portfolio">here</a>.
                         </p>
                     </div>
                 </div>
@@ -101,19 +107,18 @@
     </section>
 
     <!-- services section-->
-    <section id="services">
+    <section id="experience">
         <br></br>
         <br>
         <div class="container">
-            <h1 class="text-center">Services</h1>
+            <h1 class="text-center">Experience</h1>
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class="fas servicesIcon fa-clock"></i>
-                            <h4 class="card-title mt-3">Frontend & Backend Development</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <h4 class="card-title mt-3">Frontend & Backend</h4>
+                            <p class="card-text mt-3"> Proficient with developing user-friendly websites, applications and Restful APIs using languages like React.js, Express.js, HTML, CSS and vanilla Javascript. Experience with building applications with full CRUD functionality.
                             </p>
                         </div>
                     </div>  
@@ -123,8 +128,7 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-layer-group'></i>
                             <h4 class="card-title mt-3">UI/UX</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3"> Produced high-quality wireframes for clients to conceptualize a comprehensive UI/UX design strategy for brands. Designed custom UI elements and tools like navigation menus, search boxes etc. to develop themes and create a cohesive experience for users.
                             </p>
                         </div>
                     </div>  
@@ -135,8 +139,7 @@
                         <div class="card-body">
                             <i class='far servicesIcon fa-check-circle'></i>
                             <h4 class="card-title mt-3">Web App Deployment</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Deployed and scaled numerous applications on platforms like Heroku, Netlify, Render, Firebase & AWS for production environment. Provided development support and troubleshooting on deployment platforms. 
                             </p>
                         </div>
                     </div>  
@@ -149,8 +152,8 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-database'></i>
                             <h4 class="card-title mt-3">SQL Database</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Planned and designed entity relationship diagrams for databases using tools like Figma and Canva. Proficient with creating custom MySQL databases and tables with complex relationship structures able to handle thousands of user queries simultaneously.  
+
                             </p>
                         </div>
                     </div>  
@@ -161,8 +164,8 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-shield-alt'></i>
                             <h4 class="card-title mt-3">System Administration</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Provided technical support to various businesses in the area across multiple fields including troubleshooting hardware and software issues, and configuring devices. Provided operating system & software support including platforms like Windows OS, MacOS, iOS, Android, and Microsoft Office. 
+
                             </p>
                         </div>
                     </div>  
@@ -173,8 +176,7 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-network-wired'></i>
                             <h4 class="card-title mt-3">Networking</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Configured and installed various network devices and services (e.g., routers, switches, firewalls, load balancers, VPN, QoS). Provided Level 1-3 support and troubleshooting to resolve network issues including VOIP and fax service. 
                             </p>
                         </div>
                     </div>  
