--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
             <a class="navbar-brand" href="#">Siddhant Bose</a>
-            <button class="toggledark">Toggle Dark Mode</button>
+            <!-- <button class="toggledark">Toggle Dark Mode</button> -->
+            <div class="toggledark">
+                <label class="switch">
+                  <input type="checkbox" class="checkbox">
+                  <span class="slider"></span>
+                </label> Dark Mode
+              </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
