--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- <button class="toggledark">Toggle Dark Mode</button> -->
             <div class="toggledark">
                 <label class="switch">
-                  <input type="checkbox" class="checkbox" checked>
+                  <input type="checkbox" class="checkbox">
                   <span class="slider"></span>
                 </label> Dark Mode
               </div>
