Made dark mode default for site.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="test34">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
@@ -22,7 +22,7 @@
             <!-- <button class="toggledark">Toggle Dark Mode</button> -->
             <div class="toggledark">
                 <label class="switch">
-                  <input type="checkbox" class="checkbox">
+                  <input type="checkbox" class="checkbox" checked>
                   <span class="slider"></span>
                 </label> Dark Mode
               </div>
