--- a/index.html
+++ b/index.html
@@ -330,6 +330,6 @@
         </div>
     </footer>
 
-    <script src="script/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
