Fixed link for N20W Member Portal project and Updated LinkedIn URL in footer. Fixed some typos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1 class="hero-title">
                 Hi! I'm <span class="hero-name">Sid</span><span class="hero-dot">.</span>
             </h1>
-            <p class="hero-subtitle">I build robust web applications and manage enterprise IT infrastructure — from React frontends to Active Directory environments.</p>
+            <p class="hero-subtitle">I build robust web applications and manage enterprise IT infrastructure from React frontends to Active Directory environments.</p>
             <div class="hero-actions">
                 <a href="#projects" class="btn btn-primary">View My Work <i class="fa-solid fa-arrow-down-long"></i></a>
                 <a href="#contact" class="btn btn-outline">Get In Touch</a>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="about-text-col">
-                    <p class="about-intro">Hello! My name is <strong>Siddhant Bose</strong> — or you can call me <strong>Sid</strong>. I am a highly motivated army veteran and efficient problem solver with over 2000 hours of coding experience.</p>
+                    <p class="about-intro">Hello! My name is <strong>Siddhant Bose</strong> or you can call me <strong>Sid</strong>. I am a highly motivated army veteran and efficient problem solver with over 2000 hours of coding experience.</p>
                     <p class="about-body">I focus on both frontend and backend applications, along with many years of experience troubleshooting and supporting end-user hardware and network-related issues. I am proficient across Windows, MacOS, iOS, Android, and Microsoft Office.</p>
                     <div class="skills-grid">
                         <div class="skill-group">
@@ -259,7 +259,7 @@
                         <div class="project-tech">
                             <span>React</span><span>Express</span><span>PostgreSQL</span><span>REST API</span>
                         </div>
-                        <a href="https://n20wmembers.herokuapp.com/" class="project-link" target="_blank" rel="noopener">View Live <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="https://github.com/pyrotechnicsid/N20W_MembersPortal" class="project-link" target="_blank" rel="noopener">View on Github <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </article>
                 <article class="project-card" data-anim="fade-up" style="--delay: 2">
@@ -325,7 +325,7 @@
             <p>&copy; 2026 Siddhant Bose. All rights reserved.</p>
             <div class="footer-links">
                 <a href="https://github.com/pyrotechnicsid" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/siddhant-bose/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/siddhantbose/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
     </footer>
