Fixed links for linkedin

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <p class="contact-intro">Interested in working together or have a question? I'd love to hear from you. Drop me a message and I'll get back to you as soon as I can.</p>
                     <div class="contact-links">
                         <a href="https://github.com/pyrotechnicsid" class="contact-social" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i> GitHub</a>
-                        <a href="https://www.linkedin.com/in/siddhant-bose/" class="contact-social" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/siddhantbose/" class="contact-social" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
                     </div>
                 </div>
                 <form class="contact-form" id="contactForm">
