Added comptia Security certification to index.html

--- a/index.html
+++ b/index.html
@@ -186,6 +186,16 @@
             <div class="cert-grid">
                 <div class="cert-card" data-anim="fade-up" style="--delay: 0">
                     <div class="cert-image-wrapper">
+                        <img src="images/cert4.jpg" alt="CompTIA Security+" class="cert-image">
+                    </div>
+                    <div class="cert-content">
+                        <h3 class="cert-title">CompTIA Security+</h3>
+                        <p class="cert-desc">Industry-standard certification covering cybersecurity fundamentals, threat management, risk mitigation, network security, and security operations across hybrid environments.</p>
+                        <a href="https://www.credly.com/badges/2dc9210e-ae9c-4cd4-ac9f-c3c4ecb5c0c0/public_url" class="cert-link" target="_blank" rel="noopener">View Certificate <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="cert-card" data-anim="fade-up" style="--delay: 1">
+                    <div class="cert-image-wrapper">
                         <img src="images/cert1.jpg" alt="Advanced Software Engineering Immersive" class="cert-image">
                     </div>
                     <div class="cert-content">
@@ -194,7 +204,7 @@
                         <a href="https://media.licdn.com/dms/image/D562DAQFI4FdBhdNv8g/profile-treasury-document-images_1280/1/1686849165870?e=1690416000&v=beta&t=kJqDt1NBSBHkQTmY6yqe3jsXjIYR_zuGC1LMwP0h018" class="cert-link" target="_blank" rel="noopener">View Certificate <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
-                <div class="cert-card" data-anim="fade-up" style="--delay: 1">
+                <div class="cert-card" data-anim="fade-up" style="--delay: 2">
                     <div class="cert-image-wrapper">
                         <img src="images/cert2.jpg" alt="Windows Server 2019 Administration" class="cert-image">
                     </div>
@@ -204,7 +214,7 @@
                         <a href="https://www.udemy.com/certificate/UC-2d3cd90e-8b80-4e3c-9aed-77ff82baaf0c/" class="cert-link" target="_blank" rel="noopener">View Certificate <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
-                <div class="cert-card" data-anim="fade-up" style="--delay: 2">
+                <div class="cert-card" data-anim="fade-up" style="--delay: 3">
                     <div class="cert-image-wrapper">
                         <img src="images/cert3.jpg" alt="Microsoft Office 365 Administration" class="cert-image">
                     </div>
