added lightbox feature to cert images

--- a/index.html
+++ b/index.html
@@ -333,6 +333,17 @@
         </div>
     </section>
 
+    <!-- ========== IMAGE MODAL ========== -->
+    <div class="image-modal" id="imageModal">
+        <div class="modal-overlay"></div>
+        <div class="modal-content">
+            <button class="modal-close" id="modalClose" aria-label="Close modal">
+                <i class="fa-solid fa-xmark"></i>
+            </button>
+            <img src="" alt="Certificate" class="modal-image" id="modalImage">
+        </div>
+    </div>
+
     <!-- ========== FOOTER ========== -->
     <footer class="footer">
         <div class="container footer-inner">
